Add some error handling and update sample.conf

--- a/controller.sample.conf
+++ b/controller.sample.conf
@@ -312,6 +312,14 @@ left_motor_max=1.0
 right_motor_max=1.0
 sleep_time=0.4
 
+[sphero_rvr]
+# maximum is 255 (very fast!), minimum is 0
+directional_speed=64
+turn_speed=64
+#delay in seconds
+turn_delay=0.4
+straight_delay=0.5
+
 [mqtt_pub]
 # If you are using MQTT you need to supply the host IP address, port, and Topic
 # host should be the IP address where the MQTT broker is running (i.e. 192.168.xx.xx)
